fix(_config.icarus.yml): typo
https://t.me/the_ccsn/7343

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -127,7 +127,7 @@ widgets:
         position: left
         type: profile
         author: CCSN
-        author_title: Changchen Student Network
+        author_title: Changcheng Student Network
         location: Beijing, China
         avatar: /img/CCSN.png
         avatar_rounded: true
